rust/foxglove/src/websocket/ws_protocol/client/snapshots/foxglove__websocket__ws_protocol__client__playback_control_request__tests__encode_play.snap
---
source: rust/foxglove/src/websocket/ws_protocol/client/playback_control_request.rs
assertion_line: 93
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x03,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
    0x00,
]
