rust/foxglove/src/websocket/ws_protocol/client/snapshots/foxglove__websocket__ws_protocol__client__playback_control_request__tests__encode_play_with_seek.snap
---
source: rust/foxglove/src/websocket/ws_protocol/client/playback_control_request.rs
expression: "format!(\"{:#04x?}\", message.to_bytes())"
---
[
    0x03,
    0x00,
    0x00,
    0x00,
    0x80,
    0x3f,
    0x01,
    0x15,
    0xcd,
    0x5b,
    0x07,
    0x00,
    0x00,
    0x00,
    0x00,
    0x07,
    0x00,
    0x00,
    0x00,
    0x73,
    0x6f,
    0x6d,
    0x65,
    0x2d,
    0x69,
    0x64,
]
